prusti_verification_20260409_152156.log
=== PRUSTI VERIFICATION LOG ===
timestamp: 2026-04-09T15:21:56.641106
file: /home/slade/defi_guardian/defi_vault.rs

--- STDOUT ---


--- STDERR ---
  __          __        __  ___             
 |__)  _\/_  |__) |  | /__`  |   ____\/_  | 
 |      /\   |  \ \__/ .__/  |       /\   | 

Prusti version: 0.2.2, commit a0681ee 2023-08-22 15:08:33 UTC, built on 2023-08-22 15:17:40 UTC
error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:145:51
    |
145 |     #[cfg_attr(prusti, ensures(self.collateral == old(self.collateral) + amount))]
    |                                                   ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:146:53
    |
146 |     #[cfg_attr(prusti, ensures(self.total_supply == old(self.total_supply) + amount))]
    |                                                     ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:179:51
    |
179 |     #[cfg_attr(prusti, ensures(self.collateral == old(self.collateral) - amount))]
    |                                                   ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:180:55
    |
180 |     #[cfg_attr(prusti, ensures(self.balances[user] == old(self.balances[user]) - amount))]
    |                                                       ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:223:45
    |
223 |     #[cfg_attr(prusti, ensures(self.debt == old(self.debt) + amount))]
    |                                             ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:224:55
    |
224 |     #[cfg_attr(prusti, ensures(self.balances[user] == old(self.balances[user]) + amount))]
    |                                                       ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:259:45
    |
259 |     #[cfg_attr(prusti, ensures(self.debt == old(self.debt) - amount))]
    |                                             ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error[E0425]: cannot find function `old` in this scope
   --> /tmp/tmpaqt_ab9x/lib.rs:260:55
    |
260 |     #[cfg_attr(prusti, ensures(self.balances[user] == old(self.balances[user]) - amount))]
    |                                                       ^^^ not found in this scope
    |
help: consider importing this function
    |
10  + use prusti_contracts::old;
    |

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0425`.
